--- a/Day01-NotQuiteLisp/Day01-NotQuiteLisp.csproj
+++ b/Day01-NotQuiteLisp/Day01-NotQuiteLisp.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\SharedTools\SharedTools.csproj" />
   </ItemGroup>
 
   <ItemGroup>
