Day 9.1 and 9.2 solution

--- a/Day09-AllInASingleNight/Day09-AllInASingleNight.csproj
+++ b/Day09-AllInASingleNight/Day09-AllInASingleNight.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Day08_Matchsticks</RootNamespace>
+    <RootNamespace>Day09_AllInASingleNight</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
